--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body class="manrope">
-    <header class="max-w-5xl mx-auto"> <!--Root width for all container-->
-        <nav class=" mb-8 lg:my-8">
+    <header class=""> <!--Root width for all container-->
+        <nav class=" max-w-5xl mx-auto mb-8 lg:my-8">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
                     <div class="dropdown">
@@ -65,42 +65,42 @@
                 </div>
             </div>
         </nav>
-        <div class="container mx-w-5xl mx-auto">
+        <div class="container  mx-auto">
             <div class="carousel w-full">
                 <div id="slide1" class="carousel-item relative w-full">
                   <img
                     src="Images/1.png"
                     class="w-full lg:h-screen" />
-                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide4" class="btn btn-circle">❮</a>
-                    <a href="#slide2" class="btn btn-circle">❯</a>
+                  <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide4" class="btn bg-black text-white btn-circle">❮</a>
+                    <a href="#slide2" class="btn bg-black text-white btn-circle">❯</a>
                   </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full">
                   <img
                     src="Images/2.png"
                     class="w-full lg:h-screen" />
-                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide1" class="btn btn-circle">❮</a>
-                    <a href="#slide3" class="btn btn-circle">❯</a>
+                  <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide1" class="btn bg-black text-white btn-circle">❮</a>
+                    <a href="#slide3" class="btn bg-black text-white btn-circle">❯</a>
                   </div>
                 </div>
                 <div id="slide3" class="carousel-item relative w-full">
                   <img
                     src="Images/3.png"
                     class="w-full lg:h-screen" />
-                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide2" class="btn btn-circle">❮</a>
-                    <a href="#slide4" class="btn btn-circle">❯</a>
+                  <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide2" class="btn bg-black text-white btn-circle">❮</a>
+                    <a href="#slide4" class="btn bg-black text-white btn-circle">❯</a>
                   </div>
                 </div>
                 <div id="slide4" class="carousel-item relative w-full">
                   <img
                     src="Images/4.png"
                     class="w-full lg:h-screen" />
-                  <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide3" class="btn btn-circle">❮</a>
-                    <a href="#slide1" class="btn btn-circle">❯</a>
+                  <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide3" class="btn bg-black text-white btn-circle">❮</a>
+                    <a href="#slide1" class="btn bg-black text-white btn-circle">❯</a>
                   </div>
                 </div>
               </div>
