--- a/index.html
+++ b/index.html
@@ -2,111 +2,111 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hockey's</title>
-    <!-- favicon  -->
-    <link rel="shortcut icon" href="Images/hockey-stick.png" type="image/x-icon">
-    <!-- tailwind and daisyUI CDN  -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- manrope google font  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
-    <style>
-        .manrope {
-            font-family: "Manrope", sans-serif;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hockey's</title>
+  <!-- favicon  -->
+  <link rel="shortcut icon" href="Images/hockey-stick.png" type="image/x-icon">
+  <!-- tailwind and daisyUI CDN  -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- manrope google font  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
+  <style>
+    .manrope {
+      font-family: "Manrope", sans-serif;
+    }
+  </style>
 </head>
 
 <body class="manrope">
-    <header class=""> <!--Root width for all container-->
-        <nav class=" max-w-5xl mx-auto mb-8 lg:my-8">
-            <div class="navbar bg-base-100">
-                <div class="navbar-start">
-                    <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h8m-8 6h16" />
-                            </svg>
-                        </div>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                            <li><a>Home</a></li>
-                            <li><a>About</a></li>
-                            <li><a>Pages</a></li>
-                            <li><a>Blog</a></li>
-                            <li><a>Contact</a></li>
-                        </ul>
-                    </div>
-                    <a class="btn btn-ghost text-4xl font-bold">Hockey's</a>
-                </div>
-                <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1">
-                        <li><a>Home</a></li>
-                        <li><a>About</a></li>
-                        <li><a>Pages</a></li>
-                        <li><a>Blog</a></li>
-                        <li><a>Contact</a></li>
-                    </ul>
-                </div>
-                <div class="navbar-end">
-                    <div class="mx-5">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
-                          </svg>
-                          
-                    </div>
-                    <a class="btn text-lg font-bold">Get Ticket</a>
-                </div>
+  <header class=""> <!--Root width for all container-->
+    <nav class=" max-w-5xl mx-auto mb-8 lg:my-8">
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+              </svg>
             </div>
-        </nav>
-        <div class="container  mx-auto">
-            <div class="carousel w-full">
-                <div id="slide1" class="carousel-item relative w-full">
-                  <img
-                    src="Images/1.png"
-                    class="w-full lg:h-screen" />
-                  <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide4" class="btn bg-black text-white btn-circle">❮</a>
-                    <a href="#slide2" class="btn bg-black text-white btn-circle">❯</a>
-                  </div>
-                </div>
-                <div id="slide2" class="carousel-item relative w-full">
-                  <img
-                    src="Images/2.png"
-                    class="w-full lg:h-screen" />
-                  <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide1" class="btn bg-black text-white btn-circle">❮</a>
-                    <a href="#slide3" class="btn bg-black text-white btn-circle">❯</a>
-                  </div>
-                </div>
-                <div id="slide3" class="carousel-item relative w-full">
-                  <img
-                    src="Images/3.png"
-                    class="w-full lg:h-screen" />
-                  <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide2" class="btn bg-black text-white btn-circle">❮</a>
-                    <a href="#slide4" class="btn bg-black text-white btn-circle">❯</a>
-                  </div>
-                </div>
-                <div id="slide4" class="carousel-item relative w-full">
-                  <img
-                    src="Images/4.png"
-                    class="w-full lg:h-screen" />
-                  <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide3" class="btn bg-black text-white btn-circle">❮</a>
-                    <a href="#slide1" class="btn bg-black text-white btn-circle">❯</a>
-                  </div>
-                </div>
-              </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+              <li><a>Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-4xl font-bold">Hockey's</a>
         </div>
-    </header>
-    <main></main>
-    <footer></footer>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a>Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Pages</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <div class="mx-5">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+            </svg>
+
+          </div>
+          <a class="btn text-lg font-bold">Get Ticket</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container  mx-auto">
+      <div class="relative carousel w-full">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="Images/1.png" class="w-full lg:h-screen" />
+          <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide4" class="btn bg-black text-white btn-circle">❮</a>
+            <a href="#slide2" class="btn bg-black text-white btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="Images/2.png" class="w-full lg:h-screen" />
+          <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide1" class="btn bg-black text-white btn-circle">❮</a>
+            <a href="#slide3" class="btn bg-black text-white btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+          <img src="Images/3.png" class="w-full lg:h-screen" />
+          <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide2" class="btn bg-black text-white btn-circle">❮</a>
+            <a href="#slide4" class="btn bg-black text-white btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide4" class="carousel-item relative w-full">
+          <img src="Images/4.png" class="w-full lg:h-screen" />
+          <div class="absolute left-5 bottom-0 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide3" class="btn bg-black text-white btn-circle">❮</a>
+            <a href="#slide1" class="btn bg-black text-white btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+      <div class="absolute lg:-bottom-20 lg:right-10 bg-black lg:w-1/3 md:w-1/2 text-white p-5 rounded-xl">
+        <div class="">
+          <h4 class="text-xl font-extrabold">Meet all the heroes from the field</h4>
+          <p class="text-xs">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main></main>
+  <footer></footer>
 </body>
+
 </html>
