--- a/index.html
+++ b/index.html
@@ -96,14 +96,15 @@
           </div>
         </div>
       </div>
-      <div class="absolute lg:-bottom-20 lg:right-10 bg-black lg:w-1/3 md:w-1/2 text-white p-5 rounded-xl">
-        <div class="">
-          <h4 class="text-xl font-extrabold">Meet all the heroes from the field</h4>
-          <p class="text-xs">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin. </p>
-        </div>
+    </div>
+    <div class=" w-full">
+      <div class=" text-white p-5 rounded-xl lg:absolute lg:-bottom-20 lg:right-10 bg-black lg:w-1/3 mx-auto md:w-9/12 ">
+        <h4 class="text-xl font-extrabold pb-2">Meet all the heroes from the field</h4>
+        <p class="text-xs font-extralight">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+          turpis placerat dolor. Purus urna in sit nullam proin. </p>
       </div>
     </div>
+    
   </header>
   <main></main>
   <footer></footer>
