--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body class="manrope">
-  <header class=""> <!--Root width for all container-->
-    <nav class=" max-w-5xl mx-auto mb-8 lg:my-8">
+  <header class="">
+    <nav class=" max-w-5xl mx-auto mb-8 my-8"><!--Root width for all container-->
       <div class="navbar bg-base-100">
         <div class="navbar-start">
           <div class="dropdown">
@@ -98,15 +98,90 @@
       </div>
     </div>
     <div class=" w-full">
-      <div class=" text-white p-5 rounded-xl lg:absolute lg:-bottom-20 lg:right-10 bg-black lg:w-1/3 mx-auto md:w-9/12 ">
+      <div
+        class=" text-white p-5 rounded-xl lg:absolute lg:-bottom-20 lg:right-10 bg-black lg:w-1/3 mx-auto md:w-9/12 ">
         <h4 class="text-xl font-extrabold pb-2">Meet all the heroes from the field</h4>
         <p class="text-xs font-extralight">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
           turpis placerat dolor. Purus urna in sit nullam proin. </p>
       </div>
     </div>
-    
   </header>
-  <main></main>
+  <main>
+    <!-- progress section  -->
+    <div class="container max-w-5xl mx-auto mb-8 my-8">
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
+      <div class="text-center">
+        <h2 class="text-4xl font-extrabold my-5">
+          Professional Hockeys Club
+        </h2>
+        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit
+          nullam proin. </p>
+      </div>
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
+
+      <!-- progress bar  -->
+      <div class=" my-8 flex flex-col xl:flex-row justify-around">
+        <!-- progress 1   -->
+        <div class="flex flex-col items-center gap-5 ">
+          <div class="radial-progress text-[#FF4240]" style="--value:87; --size:6rem; --thickness: 0.7rem;"
+            role="progressbar">
+            87%
+          </div>
+          <div class="text-center">
+            <h4 class="text-xl font-semibold py-2">
+              Prayer Facility
+            </h4>
+            <p class="text-base font-light">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+          </div>
+        </div>
+        <!-- progress 2  -->
+        <div class="flex flex-col items-center gap-5 ">
+          <div class="radial-progress text-[#49D293]" style="--value:95; --size:6rem; --thickness: 0.7rem;"
+            role="progressbar">
+            95%
+          </div>
+          <div class="text-center">
+            <h4 class="text-xl font-semibold py-2">
+              Experienced Coach
+            </h4>
+            <p class="text-base font-light">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+          </div>
+        </div>
+        <!-- progress 3  -->
+        <div class="flex flex-col items-center gap-5 ">
+          <div class="radial-progress text-[#FFB546]" style="--value:90; --size:6rem; --thickness: 0.7rem;"
+            role="progressbar">
+            90%
+          </div>
+          <div class="text-center">
+            <h4 class="text-xl font-semibold py-2">
+              Senior Player
+            </h4>
+            <p class="text-base font-light">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+          </div>
+        </div>
+        <!-- progress 4 -->
+        <div class="flex flex-col items-center gap-5 ">
+          <div class="radial-progress text-[#4C8DF1]" style="--value:80; --size:6rem; --thickness: 0.7rem;"
+            role="progressbar">
+            80%
+          </div>
+          <div class="text-center">
+            <h4 class="text-xl font-semibold py-2">
+              Prayer Facility
+            </h4>
+            <p class="text-base font-light">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+          </div>
+        </div>
+      </div>
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
+
+    </div>
+    <!-- programs section  -->
+    <div class="container max-w-5xl mx-auto mb-8 my-8">
+      
+    </div>
+  </main>
   <footer></footer>
 </body>
 
