Professional Hockeys Club card basic structure and responsive emplement

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
+  <script src="tailwind.config.js"></script>
   <style>
     .manrope {
       font-family: "Manrope", sans-serif;
@@ -179,10 +180,64 @@
     </div>
     <!-- programs section  -->
     <div class="container max-w-5xl mx-auto mb-8 my-8">
-      
+      <div class="text-center">
+        <h2 class="text-4xl font-extrabold my-5">
+          Professional Hockeys Club
+        </h2>
+        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit
+          nullam proin. </p>
+      </div>
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
+
+      <!-- programs section  -->
+      <div class="grid gap-5">
+        <!-- card 1  -->
+        <div class="card bg-base-100 image-full shadow-xl">
+          <figure>
+            <img src="images/2.png" alt="Junior Program" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-xl font-extrabold">Junior Program</h2>
+            <p class="text-xs font-extralight">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <div class="card-actions justify-start">
+              <button class="btn btn-primary text-lg font-bold">Register now!</button>
+            </div>
+          </div>
+        </div>
+        <!-- card 2  -->
+        <div class="card bg-base-100 image-full shadow-xl">
+          <figure>
+            <img src="images/3.png" alt="Junior Program" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-xl font-extrabold pb-2">Teenager Program</h2>
+            <p class="text-xs font-extralight">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <div class="card-actions justify-start">
+              <button class="btn btn-primary text-lg font-bold">Register now!</button>
+            </div>
+          </div>
+        </div>
+        <!-- card 3  -->
+        <div class="lg:col-span-2 card bg-base-100 image-full shadow-xl">
+          <figure>
+            <img src="images/4.png" alt="Junior Program" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-xl font-extrabold pb-2">Professional Program</h2>
+            <p class="text-xs font-extralight">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <div class="card-actions justify-start">
+              <button class="btn btn-primary text-lg font-bold">Register now!</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <footer></footer>
+
 </body>
 
 </html>
