is'n Professional Hockeys Club itwas Program Sections card basic structure and responsive emplement

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="container max-w-5xl mx-auto mb-8 my-8">
       <div class="text-center">
         <h2 class="text-4xl font-extrabold my-5">
-          Professional Hockeys Club
+          Program Sections
         </h2>
         <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit
           nullam proin. </p>
