Program Sections responsive properly emplement done

--- a/index.html
+++ b/index.html
@@ -196,10 +196,11 @@
           <figure>
             <img src="images/2.png" alt="Junior Program" />
           </figure>
-          <div class="card-body">
+          
+          <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold">Junior Program</h2>
-            <p class="text-xs font-extralight">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
-              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <p class="text-xs font-extralight">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+              enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed et in.</p>
             <div class="card-actions justify-start">
               <button class="btn btn-primary text-lg font-bold">Register now!</button>
             </div>
@@ -210,10 +211,10 @@
           <figure>
             <img src="images/3.png" alt="Junior Program" />
           </figure>
-          <div class="card-body">
+          <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Teenager Program</h2>
-            <p class="text-xs font-extralight">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
-              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <p class="text-xs font-extralight">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+              enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed et in.</p>
             <div class="card-actions justify-start">
               <button class="btn btn-primary text-lg font-bold">Register now!</button>
             </div>
@@ -224,10 +225,10 @@
           <figure>
             <img src="images/4.png" alt="Junior Program" />
           </figure>
-          <div class="card-body">
+          <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Professional Program</h2>
-            <p class="text-xs font-extralight">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
-              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <p class="text-xs font-extralight">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+              enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed et in.</p>
             <div class="card-actions justify-start">
               <button class="btn btn-primary text-lg font-bold">Register now!</button>
             </div>
