--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
-  <script src="tailwind.config.js"></script>
+  <!-- <script src="tailwind.config.js"></script -->
   <style>
     .manrope {
       font-family: "Manrope", sans-serif;
@@ -209,7 +209,7 @@
         <!-- card 2  -->
         <div class="card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="images/3.png" alt="Junior Program" />
+            <img src="images/3.png" alt="Teenager Program" />
           </figure>
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Teenager Program</h2>
@@ -223,7 +223,7 @@
         <!-- card 3  -->
         <div class="lg:col-span-2 card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="images/4.png" alt="Junior Program" />
+            <img src="images/4.png" alt="Professional Program" />
           </figure>
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Professional Program</h2>
