--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <!-- card 1  -->
         <div class="card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="images/2.png" alt="Junior Program" />
+            <img src="images/program1.png" alt="Junior Program" />
           </figure>
           
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
@@ -209,7 +209,7 @@
         <!-- card 2  -->
         <div class="card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="images/3.png" alt="Teenager Program" />
+            <img src="images/program2.png" alt="Teenager Program" />
           </figure>
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Teenager Program</h2>
@@ -223,7 +223,7 @@
         <!-- card 3  -->
         <div class="lg:col-span-2 card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="images/4.png" alt="Professional Program" />
+            <img src="images/program3.png" alt="Professional Program" />
           </figure>
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Professional Program</h2>
