--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
       <div class="grid gap-5">
         <!-- card 1  -->
         <div class="card bg-base-100 image-full shadow-xl">
-          <figure>
+          <!-- <figure> -->
             <img src="images/program1.png" alt="Junior Program" />
-          </figure>
+          <!-- </figure> -->
           
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold">Junior Program</h2>
@@ -209,7 +209,7 @@
         <!-- card 2  -->
         <div class="card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="images/program2.png" alt="Teenager Program" />
+            <img src="/images/program2.png" alt="Teenager Program" />
           </figure>
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Teenager Program</h2>
