--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
       <div class="grid gap-5">
         <!-- card 1  -->
         <div class="card bg-base-100 image-full shadow-xl">
-          <!-- <figure> -->
-            <img src="images/program1.png" alt="Junior Program" />
-          <!-- </figure> -->
+          <figure>
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.economist.com%2Fculture%2F2023%2F01%2F27%2Fhockeys-potential-relies-on-india-its-fallen-superpower&psig=AOvVaw0tUtUQrMVEcb0JOnFHCbfg&ust=1728228894584000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJDDqb3I94gDFQAAAAAdAAAAABAJ" alt="Junior Program" />
+          </figure>
           
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold">Junior Program</h2>
