change images to Images

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <!-- card 1  -->
         <div class="card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="images/program1.png" alt="Junior Program" />
+            <img src="Images/program1.png" alt="Junior Program" />
           </figure>
 
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
@@ -210,7 +210,7 @@
         <!-- card 2  -->
         <div class="card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="/images/program2.png" alt="Teenager Program" />
+            <img src="/Images/program2.png" alt="Teenager Program" />
           </figure>
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Teenager Program</h2>
@@ -225,7 +225,7 @@
         <!-- card 3  -->
         <div class="lg:col-span-2 card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="images/program3.png" alt="Professional Program" />
+            <img src="Images/program3.png" alt="Professional Program" />
           </figure>
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Professional Program</h2>
@@ -256,7 +256,7 @@
           <div class="grid grid-cols-1 lg:grid-cols-3 border rounded-xl lg:p-5 shadow-xl">
             <div class="lg:col-span-1 flex items-center justify-center w-full p-5">
 
-              <img class="w-full" src="images/new-product1.png" alt="">
+              <img class="w-full" src="Images/new-product1.png" alt="">
 
             </div>
             <div class="lg:col-span-2 space-y-3 flex flex-col justify-center">
@@ -320,7 +320,7 @@
           <div class="grid grid-cols-1 lg:grid-cols-3 border rounded-xl lg:p-5 shadow-lg">
             <div class="lg:col-span-1 flex items-center justify-center w-full p-5">
 
-              <img class="w-full" src="images/new-product2.png" alt="">
+              <img class="w-full" src="Images/new-product2.png" alt="">
 
             </div>
             <div class="lg:col-span-2 space-y-3 flex flex-col justify-center">
@@ -384,7 +384,7 @@
           <div class="grid grid-cols-1 lg:grid-cols-3 border rounded-xl lg:p-5 shadow-xl">
             <div class="lg:col-span-1 flex items-center justify-center w-full p-5">
 
-              <img class="w-full" src="images/new-product3.png" alt="">
+              <img class="w-full" src="Images/new-product3.png" alt="">
 
             </div>
             <div class="lg:col-span-2 space-y-3 flex flex-col justify-center">
@@ -448,7 +448,7 @@
           <div class="grid grid-cols-1 lg:grid-cols-3 border rounded-xl lg:p-5 shadow-xl">
             <div class="lg:col-span-1 flex items-center justify-center w-full p-5">
 
-              <img class="w-full" src="images/new-product4.png" alt="">
+              <img class="w-full" src="Images/new-product4.png" alt="">
 
             </div>
             <div class="lg:col-span-2 space-y-3 flex flex-col justify-center">
@@ -512,7 +512,7 @@
           <div class="grid grid-cols-1 lg:grid-cols-3 border rounded-xl lg:p-5 shadow-xl">
             <div class="lg:col-span-1 flex items-center justify-center w-full p-5">
 
-              <img class="w-full" src="images/new-product5.png" alt="">
+              <img class="w-full" src="Images/new-product5.png" alt="">
 
             </div>
             <div class="lg:col-span-2 space-y-3 flex flex-col justify-center">
@@ -576,7 +576,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-3 border rounded-xl lg:p-5 shadow-xl">
           <div class="lg:col-span-1 flex items-center justify-center w-full p-5">
            
-              <img class="w-full" src="images/new-product6.png" alt="">
+              <img class="w-full" src="Images/new-product6.png" alt="">
             
           </div>
           <div class="lg:col-span-2 space-y-3 flex flex-col justify-center">
