--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <!-- card 2  -->
         <div class="card bg-base-100 image-full shadow-xl">
           <figure>
-            <img src="/Images/program2.png" alt="Teenager Program" />
+            <img src="Images/program2.png" alt="Teenager Program" />
           </figure>
           <div class="flex flex-col justify-end text-white z-10 p-10 space-y-4">
             <h2 class="card-title text-xl font-extrabold pb-2">Teenager Program</h2>
