Our New Products sections done!

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <main>
     <!-- progress section  -->
     <div class="container max-w-5xl mx-auto mb-8 my-8">
-      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
       <div class="text-center">
         <h2 class="text-4xl font-extrabold my-5">
           Professional Hockeys Club
@@ -118,7 +118,7 @@
         <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit
           nullam proin. </p>
       </div>
-      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
 
       <!-- progress bar  -->
       <div class=" my-8 flex flex-col xl:flex-row justify-around">
@@ -175,7 +175,7 @@
           </div>
         </div>
       </div>
-      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
 
     </div>
     <!-- programs section  -->
@@ -187,7 +187,7 @@
         <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit
           nullam proin. </p>
       </div>
-      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
 
       <!-- programs section  -->
       <div class="grid gap-5 my-8">
@@ -238,8 +238,8 @@
           </div>
         </div>
       </div>
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
     </div>
-    <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
     <!-- Our New Products section      -->
     <div class="ontainer max-w-5xl mx-auto mb-8 my-8">
       <div class="text-center">
@@ -249,7 +249,7 @@
         <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit
           nullam proin. </p>
       </div>
-      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted py-5">
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
       <div class="grid lg:grid-cols-2 my-10 lg:my-0 gap-y-5 lg:gap-5">
         <!-- new product card 1 -->
         <div class="">
@@ -634,6 +634,7 @@
         </div>
         </div>
       </div>
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
     </div>
   </main>
   <footer></footer>
