Clients Question section emplement with responsive

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
     </div>
     <!-- Our New Products section      -->
-    <div class="ontainer max-w-5xl mx-auto mb-8 my-8">
+    <div class="container max-w-5xl mx-auto mb-8 my-8">
       <div class="text-center">
         <h2 class="text-4xl font-extrabold my-5">
           Our New Products
@@ -573,65 +573,139 @@
         </div>
         <!-- new product card 6 -->
         <div class="">
-        <div class="grid grid-cols-1 lg:grid-cols-3 border rounded-xl lg:p-5 shadow-xl">
-          <div class="lg:col-span-1 flex items-center justify-center w-full p-5">
-           
+          <div class="grid grid-cols-1 lg:grid-cols-3 border rounded-xl lg:p-5 shadow-xl">
+            <div class="lg:col-span-1 flex items-center justify-center w-full p-5">
+
               <img class="w-full" src="Images/new-product6.png" alt="">
-            
-          </div>
-          <div class="lg:col-span-2 space-y-3 flex flex-col justify-center">
-            <!-- rating | views | reaction  -->
-            <div class="flex gap-5">
-              <!-- rating  -->
-              <div class="flex gap-2">
-                <svg class="w-6 text-[#F99808]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
-                  class="size-6">
-                  <path fill-rule="evenodd"
-                    d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z"
-                    clip-rule="evenodd" />
-                </svg>
-                <p class="font-light">5.00</p>
-              </div>
-              <!-- view  -->
-              <div class="flex gap-2">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                  stroke="currentColor" class="size-6">
-                  <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                </svg>
-                <p class="font-light">20</p>
-              </div>
-              <!-- reaction  -->
-              <div class="flex gap-2">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                  stroke="currentColor" class="size-6">
-                  <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
-                </svg>
-                <p class="font-light">200</p>
-              </div>
+
             </div>
-            <!-- captions  -->
-             <div class="">
-              <h4 class="text-lg font-extrabold gap-2">World Cup Flags Football</h4>
-              <p>Dolor sit amet consectetur. Ut urna diam <br> quis sagittis. </p>
-             </div>
-             <!-- pricing | delivery  -->
+            <div class="lg:col-span-2 space-y-3 flex flex-col justify-center">
+              <!-- rating | views | reaction  -->
+              <div class="flex gap-5">
+                <!-- rating  -->
+                <div class="flex gap-2">
+                  <svg class="w-6 text-[#F99808]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                    fill="currentColor" class="size-6">
+                    <path fill-rule="evenodd"
+                      d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.006 5.404.434c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.434 2.082-5.005Z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  <p class="font-light">5.00</p>
+                </div>
+                <!-- view  -->
+                <div class="flex gap-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                  </svg>
+                  <p class="font-light">20</p>
+                </div>
+                <!-- reaction  -->
+                <div class="flex gap-2">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                  </svg>
+                  <p class="font-light">200</p>
+                </div>
+              </div>
+              <!-- captions  -->
+              <div class="">
+                <h4 class="text-lg font-extrabold gap-2">World Cup Flags Football</h4>
+                <p>Dolor sit amet consectetur. Ut urna diam <br> quis sagittis. </p>
+              </div>
+              <!-- pricing | delivery  -->
               <div class="flex gap-5">
                 <div class="">
                   <p><span class="font-bold text-red-500">Price - $22.00</span></p>
                 </div>
                 <div class="flex gap-2">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-                  </svg>                
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                  </svg>
                   <p class="text-[#131318]">Delivery Fee : Free</p>
                 </div>
               </div>
+            </div>
+
           </div>
-  
         </div>
+      </div>
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
+    </div>
+    <!-- Clients Question -->
+    <div class="container max-w-5xl mx-auto mb-8 my-8">
+      <div class="text-center">
+        <h2 class="text-4xl font-extrabold my-5">
+          Clients Question
+        </h2>
+        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit
+          nullam proin. </p>
+      </div>
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
+      <!-- FAQ  -->
+      <div class="grid lg:grid-cols-10 gap-5">
+        <!-- images  -->
+        <div class="lg:col-span-4  flex justify-center items-center ">
+          <img class="" src="Images/question.png" alt="">
+        </div>
+        <!-- questions -->
+        <div class="lg:col-span-6 space-y-2 ">
+          <div class=" ">
+            <!-- q1 -->
+            <div class="collapse collapse-plus border ">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">Our Equipment</div>
+              <div class="collapse-content">
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <!-- q2 -->
+            <div class="collapse collapse-plus border ">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Hockey Training</div>
+              <div class="collapse-content">
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga sed expedita hic voluptas laudantium culpa, sint laboriosam ab molestiae accusamus earum, assumenda nemo voluptatum id, aut accusantium esse similique illo.</p>
+              </div>
+            </div>
+            <!-- q3 -->
+            <div class="collapse collapse-plus border ">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Private Lessons</div>
+              <div class="collapse-content">
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <!-- q4 -->
+            <div class="collapse collapse-plus border ">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Ski Touring</div>
+              <div class="collapse-content">
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <!-- q5 -->
+            <div class="collapse collapse-plus border ">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Booking</div>
+              <div class="collapse-content">
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <!-- q6 -->
+            <div class="collapse collapse-plus border ">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Pricings</div>
+              <div class="collapse-content">
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
