--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Hockey's</title>
   <!-- favicon  -->
   <link rel="shortcut icon" href="Images/hockey-stick.png" type="image/x-icon">
+  <!-- <script src="tailwind.config.js"></script> -->
   <!-- tailwind and daisyUI CDN  -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -24,7 +25,7 @@
 
 <body class="manrope">
   <header class="">
-    <nav class=" max-w-5xl mx-auto mb-8 my-8"><!--Root width for all container-->
+    <nav class=" lg:max-w-5xl mx-auto mb-8 my-8"><!--Root width for all container-->
       <div class="navbar bg-base-100">
         <div class="navbar-start">
           <div class="dropdown">
@@ -66,6 +67,7 @@
         </div>
       </div>
     </nav>
+    <!-- slider  -->
     <div class="container  mx-auto">
       <div class="relative carousel w-full">
         <div id="slide1" class="carousel-item relative w-full">
@@ -710,6 +712,7 @@
       </div>
       <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
     </div>
+    <h1 class="text-6xl lg:text-center md:text-center ss:text-center">you! </h1>
   </main>
   <footer></footer>
 
