--- a/index.html
+++ b/index.html
@@ -672,7 +672,10 @@
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-medium">Hockey Training</div>
               <div class="collapse-content">
-                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga sed expedita hic voluptas laudantium culpa, sint laboriosam ab molestiae accusamus earum, assumenda nemo voluptatum id, aut accusantium esse similique illo.</p>
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga sed expedita hic voluptas laudantium
+                  culpa, sint laboriosam ab molestiae accusamus earum, assumenda nemo voluptatum id, aut accusantium
+                  esse similique illo.</p>
               </div>
             </div>
             <!-- q3 -->
@@ -712,7 +715,57 @@
       </div>
       <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
     </div>
-    <h1 class="text-6xl lg:text-center md:text-center ss:text-center">you! </h1>
+    <!-- Get in tuch -->
+    <div class="container max-w-5xl mx-auto mb-8 my-8">
+      <div class="text-center">
+        <h2 class="text-4xl font-extrabold my-5">
+          Get In Touch
+        </h2>
+        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit
+          nullam proin. </p>
+      </div>
+      <!-- contact and email form -->
+      <div class="">
+        <div class="grid grid-cols-10">
+          <!-- number email location  -->
+          <div class="col-span-4 border rounded-lg p-10 space-y-5">
+            <!-- Phone  -->
+            <div class="bg-[#BCED6D1a] rounded-lg p-8">
+              <img src="Images/call.png" alt="">
+              <p class="text-lg">Phone Number:</p>
+              <h4 class="text-2xl">
+                (+62) 111-333-777
+              </h4>
+
+            </div>
+            <!-- Email -->
+            <div class="bg-[#FDDD5F1a] rounded-lg p-8">
+              <img src="Images/email.png" alt="">
+              <p class="text-lg">Email:</p>
+              <h4 class="text-2xl">
+                hockeys@support.com
+              </h4>
+            </div>
+            <!-- GPS  -->
+            <div class="bg-[#629CF31a] rounded-lg p-8">
+              <img src="Images/gps.png" alt="">
+              <p class="text-lg">Location:</p>
+              <h4 class="text-2xl">
+                (+62) 111-333-777
+              </h4>
+            </div>
+
+          </div>
+          <!-- send main form  -->
+          <div class="col-span-6">
+
+
+          </div>
+        </div>
+      </div>
+
+      <hr class=" border-2 border-t-0 border-l-0 border-r-0 border-dotted my-10">
+    </div>
   </main>
   <footer></footer>
 
