--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
           <div class=" lg:col-span-4 border rounded-lg lg:p-8 space-y-5 flex flex-col justify-center">
             <!-- Phone  -->
             <div class="flex items-center justify-center">
-              <div class="w-1-64 bg-[#BCED6D1a] rounded-lg p-8">
+              <div class="w-full lg:w-64 bg-[#BCED6D1a] rounded-lg p-8">
                 <img src="Images/call.png" alt="">
                 <p class="text-lg">Phone Number:</p>
                 <h4 class="text-xl">
@@ -741,7 +741,7 @@
             </div>
             <!-- Email -->
             <div class="flex items-center justify-center">
-              <div class="w-64 bg-[#FDDD5F1a] rounded-lg p-8">
+              <div class="w-full lg:w-64 bg-[#FDDD5F1a] rounded-lg p-8">
                 <img src="Images/email.png" alt="">
                 <p class="text-lg">Email:</p>
                 <h4 class="text-xl">
@@ -749,49 +749,46 @@
                 </h4>
               </div>
             </div>
-
             <!-- GPS  -->
             <div class="flex items-center justify-center">
-              <div class="w-64 bg-[#629CF31a] rounded-lg p-8">
+              <div class="w-full lg:w-64 bg-[#629CF31a] rounded-lg p-8">
                 <img src="Images/gps.png" alt="">
                 <p class="text-lg">Location:</p>
                 <h4 class="text-xl">
-                  (+62) 111-333-777
+                  152/1 Mohakhali Wireless Gate
                 </h4>
               </div>
             </div>
-
-
           </div>
           <!--email sending form  -->
           <div class="lg:col-span-6 justify-center items-center">
             <!-- all label  -->
             <div class="">
               <div class="flex flex-col justify-center">
-                <div class="grid lg:grid-cols-2 grid-rows-7 gap-x-5 gap-y-3">
+                <div class="grid lg:grid-cols-2 lg:grid-rows-7 gap-x-5 gap-y-3">
                   <!-- label-1 -->
-                  <label class="form-control w-full max-w-xs">
+                  <label class="form-control w-full ">
                     <div class="label">
                       <span class="label-text">What is your name</span>
                     </div>
                     <input type="text" placeholder="Enter Your Name" class="input input-bordered w-full max-w-xs" />
                   </label>
                   <!-- label-2 -->
-                  <label class="form-control w-full max-w-xs">
+                  <label class="form-control w-full ">
                     <div class="label">
                       <span class="label-text">What is your Email</span>
                     </div>
                     <input type="text" placeholder="Enter Your Email" class="input input-bordered w-full max-w-xs" />
                   </label>
                   <!-- label-3 -->
-                  <label class="form-control w-full max-w-xs">
+                  <label class="form-control w-full">
                     <div class="label">
                       <span class="label-text">What is your Subject</span>
                     </div>
                     <input type="text" placeholder="Enter Your Subject" class="input input-bordered w-full max-w-xs" />
                   </label>
                   <!-- label-4 -->
-                  <label class="form-control w-full max-w-xs">
+                  <label class="form-control w-full">
                     <div class="label">
                       <span class="label-text">What is your Number</span>
                     </div>
@@ -813,7 +810,7 @@
     </div>
   </main>
   <footer>
-    
+
   </footer>
 
 </body>
